--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
+            <li class="nav-item1">
               <a class="nav-link active text-light" aria-current="page" href="#"><i class="bi bi-house-door-fill"> </i> </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item2">
               <a class="nav-link text-light" href="#about"> About </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item3">
               <a class="nav-link text-light" href="#project"> Project </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item4">
               <a class="nav-link text-light bi-telephone" href="#contact"> Contact</a>
             </li>
             <!-- <li class="nav-item">
@@ -63,24 +63,24 @@
       <p class="lead text-center text-light">
         <strong
           >Mahasiswa | Junior Web Developer <br />
-          Gamers, Javascript, Manajemen Projek, HTML, CSS, Bootstrap v5, Game Developer.</strong
+          Gamers, Web Design, Web Development, Sistem Jaringan Komputer, Pengolahan Data base Analis, Game Developer.</strong
         >
       </p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff5b"
-          fill-opacity="1"
-          d="M0,128L40,117.3C80,107,160,85,240,117.3C320,149,400,235,480,234.7C560,235,640,149,720,138.7C800,128,880,192,960,202.7C1040,213,1120,171,1200,144C1280,117,1360,107,1400,101.3L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-        ></path>
-      </svg>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff5b"
-          fill-opacity="1"
-          d="M0,288L34.3,277.3C68.6,267,137,245,206,218.7C274.3,192,343,160,411,138.7C480,117,549,107,617,117.3C685.7,128,754,160,823,154.7C891.4,149,960,107,1029,122.7C1097.1,139,1166,213,1234,250.7C1302.9,288,1371,288,1406,288L1440,288L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"
-        ></path>
-      </svg>
     </section>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path
+        fill="#ffffff5b"
+        fill-opacity="1"
+        d="M0,128L40,117.3C80,107,160,85,240,117.3C320,149,400,235,480,234.7C560,235,640,149,720,138.7C800,128,880,192,960,202.7C1040,213,1120,171,1200,144C1280,117,1360,107,1400,101.3L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
+      ></path>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path
+        fill="#ffffff5b"
+        fill-opacity="1"
+        d="M0,288L34.3,277.3C68.6,267,137,245,206,218.7C274.3,192,343,160,411,138.7C480,117,549,107,617,117.3C685.7,128,754,160,823,154.7C891.4,149,960,107,1029,122.7C1097.1,139,1166,213,1234,250.7C1302.9,288,1371,288,1406,288L1440,288L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"
+      ></path>
+    </svg>
     <!-- Akhir Jumbotron -->
 
     <!-- About -->
