--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style="background-color: #0d6efd">
+    <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style="background-color: #0d6dfd9f">
       <div class="container-fluid">
         <a class="navbar-brand text-light" href="#"> MY PORTFOLIO </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,10 +60,10 @@
     <section class="jumbotron text-dark text-center">
       <img src="img/profil.jpg" alt="Riyadh Ruzaini" width="250" class="rounded-circle img-thumbnail" style="margin-top: 20px" />
       <h1 class="display-4 text-center"><strong>Riyadh Ruzaini</strong></h1>
-      <p class="lead text-center text-light">
+      <p class="lead text-center text-dark">
         <strong
-          >Mahasiswa | Junior Web Developer <br />
-          Gamers, Web Design, Web Development, Sistem Jaringan Komputer, Pengolahan Data base Analis, Game Developer.</strong
+          >Mahasiswa | Junior Web Development <br />
+          Gamers, Web Design, Sistem Jaringan Komputer, Pengolahan Data base Analis, Game Developer.</strong
         >
       </p>
     </section>
@@ -91,15 +91,19 @@
             <h2><i class="bi bi-file-person text-dark"></i> ABOUT ME</h2>
           </div>
         </div>
-        <div class="row justify-content-center fs-5 text-center">
+        <div class="row fs-5 justify-content-center text-center">
           <div class="col-md-4">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt saepe temporibus, molestias eveniet iusto quisquam culpa veritatis velit cum veniam facere autem eaque, assumenda qui. Laudantium laboriosam dolores fugiat
-              ipsum?
+            <p class="aboutme">
+              Saya Mahasiswa jurusan Teknik Informatika salah satu universitas di Surabaya. Terimakasih Sudah mengunjungi Halaman web Portfolio saya. Portfolio ini <strong>masih hanya tampilan Depan</strong> dengan BerNavigasi yg ada pada
+              Navbar(Home, About, Project, dan Contact me).
             </p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias laborum officiis veniam facere! Odio cupiditate nisi soluta sit nam asperiores ducimus.</p>
+            <p>
+              Web Portfolio ini dalam pengembangan Nanti Ada Berberapa tambahan halamana galery(berisi image dan video), projeck(yg saya kerjakan) dan
+              <strong>Content/Features (yaitu berisi jika anda mau membuat aplikasi atau website untuk bisnis anda).</strong> Apa bila teman-teman ingin membuat wabsite atau aplikasi berbasis web silahkan langsung isi
+              <strong>Contact Me</strong> atau bisa langsung kirim pesan lewat halaman facebook saya. atau Bisa Klik Icon Whatsapp di pojok bawa.
+            </p>
           </div>
         </div>
       </div>
@@ -326,6 +330,44 @@
       </div>
     </section>
     <!-- Akhir Contact -->
+
+    <div class="sosmedwa navbar-expand-lg fixed-bottom ms-auto">
+      <button>
+        <a href="https://api.whatsapp.com/send?phone=6285274616267&text=Kak iYak, Saya mau membuat Website atau aplikasi Berbasis Web."> <img src="img/sosmed/icons8-whatsapp-unscreen 001.gif" alt="" /></a>
+      </button>
+    </div>
+
+    <!-- <div class="whatsapp-chat">
+      <div tabindex="-1"></div>
+      <div tabindex="-1"></div>
+      <div data-lock="">
+        <div dir="ltr" class="vsc-popup" style="bottom: 20px; right: 274px">
+          <div id="vsc-popup-box" class="vsc-popup-box" style="display: none">
+            <div class="vsc-popup-header"><p>Click on one of our attendants below to chat on WhatsApp.</p></div>
+            <div class="vsc-popup-body">
+              <ul class="vsc-popup-body__list">
+                <li class="vsc-popup-body__list-item">
+                  <a
+                    href="https://api.whatsapp.com/send?phone=6285731255530&amp;text=Saya%20mau%20tukar%20pulsa%20ke ATM%20bisa%20bang?&amp;l=id"
+                    rel="noopener"
+                    target="_blank"
+                    aria-label="Contact Samsudin Abas, opens in a new window"
+                    class="vsc-popup-body__link"
+                    ><div class="vsc-popup-body__link-avatar"><img src="/icon.png" alt="Pulsagame Admin" /> <span class="vsc-popup-body__link-avatar-brand"></span></div>
+                    <div class="vsc-popup-body__link-info"><span class="vsc-popup-body__link-info__label">Pulsagame Admin</span> <span class="vsc-popup-body__link-info__name">Samsudin Abas</span></div></a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="vsc-popup-footer" style="display: none"></div>
+          </div>
+          <button aria-haspopup="true" aria-controls="vsc-popup-box" aria-expanded="false" aria-label="Open social chat popup" title="Open social chat popup" class="vsc-popup-button vsc-popup-button--default">
+            <span><img src="img/sosmed/icons8-whatsapp-unscreen 001.gif" alt="icon whatsapp" aria-hidden="true" /></span>
+          </button>
+        </div>
+      </div>
+      <div tabindex="-1"></div>
+    </div> -->
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path
