--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
         <div class="row fs-5 justify-content-center text-center">
           <div class="col-md-4">
             <p class="aboutme">
-              Saya Mahasiswa jurusan Teknik Informatika salah satu universitas di Surabaya. Terimakasih Sudah mengunjungi Halaman web Portfolio saya. Portfolio ini <strong>masih hanya tampilan Depan</strong> dengan BerNavigasi yg ada pada
-              Navbar(Home, About, Project, dan Contact me).
+              Terimakasih dan Selemat datang Sudah mengunjungi Halaman web Portfolio saya. Saya Mahasiswa jurusan Teknik Informatika salah satu universitas di Surabaya. Halamanin ini saya buat dan kembangkan sediri, dengan bahasa
+              HTML,CSS,Bootstrap dan JavaScript.
             </p>
           </div>
           <div class="col-md-4">
             <p>
-              Web Portfolio ini dalam pengembangan Nanti Ada Berberapa tambahan halamana galery(berisi image dan video), projeck(yg saya kerjakan) dan
-              <strong>Content/Features (yaitu berisi jika anda mau membuat aplikasi atau website untuk bisnis anda).</strong> Apa bila teman-teman ingin membuat wabsite atau aplikasi berbasis web silahkan langsung isi
-              <strong>Contact Me</strong> atau bisa langsung kirim pesan lewat halaman facebook saya. atau Bisa Klik Icon Whatsapp di pojok bawa.
+              Web Portfolio ini dalam pengembangan Nanti Ada Berberapa tambahan halamana galery(berisi image dan video), Project(yg saya kerjakan) dan Content/Features (yaitu berisi jika anda mau membuat aplikasi atau website untuk bisnis
+              anda). Apa bila teman-teman ingin membuat wabsite atau aplikasi berbasis web silahkan langsung isi Contact Me atau bisa langsung kirim pesan lewat halaman facebook saya. atau Bisa <strong>Klik</strong> Icon Whatsapp di pojok
+              bawa.
             </p>
           </div>
         </div>
@@ -141,25 +141,38 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/img 1.jpg" class="d-block w-100" alt="img 1" />
+                <img src="img/project-content/american-food-website-app-template/3606208.jpg" class="d-block w-100" alt="img 1" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>PC GAMMING</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <!-- <h5>PC GAMMING</h5>
+                  <p>Some representative placeholder content for the first slide.</p> -->
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/img 3.jpg" class="d-block w-100" alt="img 2" />
+                <img src="img/project-content/hiking-concept-web-template/3560840.jpg" class="d-block w-100" alt="img 2" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>PC Gamming 2</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <!-- <h5>PC Gamming 2</h5>
+                  <p>Some representative placeholder content for the second slide.</p> -->
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/img 4.jpg" class="d-block w-100" alt="img 3" />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>PC Gamming 3</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
+                <img src="img/project-content/restaurant-opening-web-template-design/3366698.jpg" class="d-block w-100" alt="img 3" />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/project-content/moody-restaurant-food-web-site-mock-up (1)/3332442.jpg" class="d-block w-100" alt="img 3" />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/project-content/social-media-marketing-agency-web-design-template/5863740.jpg" class="d-block w-100" alt="img 3" />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/project-content/travel-world-landing-page-with-photo/2917233.jpg" class="d-block w-100" alt="img 3" />
+                <div class="carousel-caption d-none d-md-block"></div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/project-content/various-web-printable-templates-with-screen/3496219.jpg" class="d-block w-100" alt="img 3" />
+                <div class="carousel-caption d-none d-md-block"></div>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
