--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -159,19 +163,19 @@
                 <div class="carousel-caption d-none d-md-block"></div>
               </div>
               <div class="carousel-item">
-                <img src="img/project-content/moody-restaurant-food-web-site-mock-up (1)/3332442.jpg" class="d-block w-100" alt="img 3" />
+                <img src="img/project-content/moody-restaurant-food-web-site-mock-up (1)/3332442.jpg" class="d-block w-100" alt="img 4" />
                 <div class="carousel-caption d-none d-md-block"></div>
               </div>
               <div class="carousel-item">
-                <img src="img/project-content/social-media-marketing-agency-web-design-template/5863740.jpg" class="d-block w-100" alt="img 3" />
+                <img src="img/project-content/social-media-marketing-agency-web-design-template/5863740.jpg" class="d-block w-100" alt="img 5" />
                 <div class="carousel-caption d-none d-md-block"></div>
               </div>
               <div class="carousel-item">
-                <img src="img/project-content/travel-world-landing-page-with-photo/2917233.jpg" class="d-block w-100" alt="img 3" />
+                <img src="img/project-content/travel-world-landing-page-with-photo/2917233.jpg" class="d-block w-100" alt="img 6" />
                 <div class="carousel-caption d-none d-md-block"></div>
               </div>
               <div class="carousel-item">
-                <img src="img/project-content/various-web-printable-templates-with-screen/3496219.jpg" class="d-block w-100" alt="img 3" />
+                <img src="img/project-content/various-web-printable-templates-with-screen/3496219.jpg" class="d-block w-100" alt="img 7" />
                 <div class="carousel-caption d-none d-md-block"></div>
               </div>
             </div>
