--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icon/favicon-16x16.png" />
+    <link rel="manifest" href="img/icon/site.webmanifest" />
+
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -63,20 +66,20 @@
       <p class="lead text-center text-dark">
         <strong
           >Mahasiswa | Junior Web Development <br />
-          Gamers, Web Design, Sistem Jaringan Komputer, Pengolahan Data base Analis, Game Developer.</strong
+          Web Design, Sistem Jaringan Komputer, Game Developer.</strong
         >
       </p>
     </section>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path
-        fill="#ffffff5b"
+        fill="#0d7dfd46"
         fill-opacity="1"
         d="M0,128L40,117.3C80,107,160,85,240,117.3C320,149,400,235,480,234.7C560,235,640,149,720,138.7C800,128,880,192,960,202.7C1040,213,1120,171,1200,144C1280,117,1360,107,1400,101.3L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
       ></path>
     </svg>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path
-        fill="#ffffff5b"
+        fill="#0d7dfd46"
         fill-opacity="1"
         d="M0,288L34.3,277.3C68.6,267,137,245,206,218.7C274.3,192,343,160,411,138.7C480,117,549,107,617,117.3C685.7,128,754,160,823,154.7C891.4,149,960,107,1029,122.7C1097.1,139,1166,213,1234,250.7C1302.9,288,1371,288,1406,288L1440,288L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"
       ></path>
@@ -91,16 +94,15 @@
             <h2><i class="bi bi-file-person text-dark"></i> ABOUT ME</h2>
           </div>
         </div>
-        <div class="row fs-5 justify-content-center text-center">
+        <div class="row fs-5 justify-content-evenly">
           <div class="col-md-4">
             <p class="aboutme">
-              Terimakasih dan Selemat datang Sudah mengunjungi Halaman web Portfolio saya. Saya Mahasiswa jurusan Teknik Informatika salah satu universitas di Surabaya. Halamanin ini saya buat dan kembangkan sediri, dengan bahasa
-              HTML,CSS,Bootstrap dan JavaScript.
+              Terimakasih dan Selemat datang Sudah mengunjungi Halaman web Portfolio saya. Saya Mahasiswa jurusan Teknik Informatika salah satu universitas di Surabaya. Halamanin ini menggunakan dengan bahasa HTML, CSS, PHP dan JavaScript.
             </p>
           </div>
           <div class="col-md-4">
-            <p>
-              Web Portfolio ini dalam pengembangan Nanti Ada Berberapa tambahan halamana galery(berisi image dan video), Project(yg saya kerjakan) dan Content/Features (yaitu berisi jika anda mau membuat aplikasi atau website untuk bisnis
+            <p class="aboutme">
+              Web Portfolio ini dalam pengembangan nanti Ada Berberapa tambahan halamana galery (berisi image dan video), Project (yg saya kerjakan) dan Content/Features (yaitu berisi jika anda mau membuat aplikasi atau website untuk bisnis
               anda). Apa bila teman-teman ingin membuat wabsite atau aplikasi berbasis web silahkan langsung isi Contact Me atau bisa langsung kirim pesan lewat halaman facebook saya. atau Bisa <strong>Klik</strong> Icon Whatsapp di pojok
               bawa.
             </p>
@@ -109,14 +111,14 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#ffffff5b"
+          fill="#0d7dfd46"
           fill-opacity="1"
           d="M0,224L21.8,229.3C43.6,235,87,245,131,218.7C174.5,192,218,128,262,96C305.5,64,349,64,393,64C436.4,64,480,64,524,101.3C567.3,139,611,213,655,240C698.2,267,742,245,785,245.3C829.1,245,873,267,916,256C960,245,1004,203,1047,197.3C1090.9,192,1135,224,1178,202.7C1221.8,181,1265,107,1309,85.3C1352.7,64,1396,96,1418,112L1440,128L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"
         ></path>
       </svg>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#ffffff5b"
+          fill="#0d7dfd46"
           fill-opacity="1"
           d="M0,288L34.3,277.3C68.6,267,137,245,206,218.7C274.3,192,343,160,411,138.7C480,117,549,107,617,117.3C685.7,128,754,160,823,154.7C891.4,149,960,107,1029,122.7C1097.1,139,1166,213,1234,250.7C1302.9,288,1371,288,1406,288L1440,288L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"
         ></path>
@@ -170,10 +172,10 @@
                 <img src="img/project-content/social-media-marketing-agency-web-design-template/5863740.jpg" class="d-block w-100" alt="img 5" />
                 <div class="carousel-caption d-none d-md-block"></div>
               </div>
-              <div class="carousel-item">
+              <!-- <div class="carousel-item">
                 <img src="img/project-content/travel-world-landing-page-with-photo/2917233.jpg" class="d-block w-100" alt="img 6" />
                 <div class="carousel-caption d-none d-md-block"></div>
-              </div>
+              </div> -->
               <div class="carousel-item">
                 <img src="img/project-content/various-web-printable-templates-with-screen/3496219.jpg" class="d-block w-100" alt="img 7" />
                 <div class="carousel-caption d-none d-md-block"></div>
@@ -285,14 +287,14 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#ffffff5b"
+          fill="#0d7dfd46"
           fill-opacity="1"
           d="M0,128L40,117.3C80,107,160,85,240,117.3C320,149,400,235,480,234.7C560,235,640,149,720,138.7C800,128,880,192,960,202.7C1040,213,1120,171,1200,144C1280,117,1360,107,1400,101.3L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
         ></path>
       </svg>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#ffffff5b"
+          fill="#0d7dfd46"
           fill-opacity="1"
           d="M0,288L34.3,277.3C68.6,267,137,245,206,218.7C274.3,192,343,160,411,138.7C480,117,549,107,617,117.3C685.7,128,754,160,823,154.7C891.4,149,960,107,1029,122.7C1097.1,139,1166,213,1234,250.7C1302.9,288,1371,288,1406,288L1440,288L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"
         ></path>
