--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style="background-color: #0d6dfd9f">
+    <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style="background-color: #0d6dfd49">
       <div class="container-fluid">
         <a class="navbar-brand text-light" href="#"> MY PORTFOLIO </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,17 +38,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item1">
-              <a class="nav-link active text-light" aria-current="page" href="#"><i class="bi bi-house-door-fill"> </i> </a>
+            <li class="nav-item">
+              <a class="nav-link1 active text-light" aria-current="page" href="#"><i class="bi bi-house-door-fill"> </i> </a>
             </li>
-            <li class="nav-item2">
-              <a class="nav-link text-light" href="#about"> About </a>
+            <li class="nav-item">
+              <a class="nav-link2" href="#about"> Service </a>
             </li>
-            <li class="nav-item3">
-              <a class="nav-link text-light" href="#project"> Project </a>
+            <li class="nav-item">
+              <a class="nav-link3" href="#project"> Galery </a>
             </li>
-            <li class="nav-item4">
-              <a class="nav-link text-light bi-telephone" href="#contact"> Contact</a>
+            <li class="nav-item">
+              <a class="nav-link4 bi-telephone" href="#contact"> Contact </a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -58,12 +58,12 @@
       </div>
     </nav>
     <!-- Akhir Navbar -->
-
+    <div class="svg_jumbotron"></div>
     <!-- Awal Jumbotron -->
-    <section class="jumbotron text-dark text-center">
-      <img src="img/profil.jpg" alt="Riyadh Ruzaini" width="250" class="rounded-circle img-thumbnail" style="margin-top: 20px" />
+    <section class="jumbotron text-center">
+      <img src="img/profil.jpg" alt="Riyadh Ruzaini" width="150px" class="rounded-circle img-thumbnail" />
       <h1 class="display-4 text-center"><strong>Riyadh Ruzaini</strong></h1>
-      <p class="lead text-center text-dark">
+      <p class="lead text-center text-light">
         <strong
           >Mahasiswa | Junior Web Development <br />
           Web Design, Sistem Jaringan Komputer, Game Developer.</strong
@@ -74,16 +74,17 @@
       <path
         fill="#0d7dfd46"
         fill-opacity="1"
-        d="M0,128L40,117.3C80,107,160,85,240,117.3C320,149,400,235,480,234.7C560,235,640,149,720,138.7C800,128,880,192,960,202.7C1040,213,1120,171,1200,144C1280,117,1360,107,1400,101.3L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
-      ></path>
-    </svg>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path
-        fill="#0d7dfd46"
-        fill-opacity="1"
         d="M0,288L34.3,277.3C68.6,267,137,245,206,218.7C274.3,192,343,160,411,138.7C480,117,549,107,617,117.3C685.7,128,754,160,823,154.7C891.4,149,960,107,1029,122.7C1097.1,139,1166,213,1234,250.7C1302.9,288,1371,288,1406,288L1440,288L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"
       ></path>
     </svg>
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path
+        fill="#0d7dfd46"
+        fill-opacity="1"
+        d="M0,128L40,117.3C80,107,160,85,240,117.3C320,149,400,235,480,234.7C560,235,640,149,720,138.7C800,128,880,192,960,202.7C1040,213,1120,171,1200,144C1280,117,1360,107,1400,101.3L1440,96L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
+      ></path>
+    </svg> -->
+
     <!-- Akhir Jumbotron -->
 
     <!-- About -->
@@ -91,7 +92,7 @@
       <div class="container">
         <div class="row text-center mb-5">
           <div class="col">
-            <h2><i class="bi bi-file-person text-dark"></i> ABOUT ME</h2>
+            <h2><i class="bi bi-file-person text-dark"></i> SERVICE</h2>
           </div>
         </div>
         <div class="row fs-5 justify-content-evenly">
@@ -101,11 +102,7 @@
             </p>
           </div>
           <div class="col-md-4">
-            <p class="aboutme">
-              Web Portfolio ini dalam pengembangan nanti Ada Berberapa tambahan halamana galery (berisi image dan video), Project (yg saya kerjakan) dan Content/Features (yaitu berisi jika anda mau membuat aplikasi atau website untuk bisnis
-              anda). Apa bila teman-teman ingin membuat wabsite atau aplikasi berbasis web silahkan langsung isi Contact Me atau bisa langsung kirim pesan lewat halaman facebook saya. atau Bisa <strong>Klik</strong> Icon Whatsapp di pojok
-              bawa.
-            </p>
+            <p class="aboutme">Kami terima pembuatan dan pengembangan website dengang hosting dan domain Anda butuh website untuk Bisnis anda silahkan langsung kirim pesan <strong>Klik</strong> Icon Whatsapp di pojok bawa.</p>
           </div>
         </div>
       </div>
@@ -131,7 +128,7 @@
       <div class="container">
         <div class="row text-center mb-5">
           <div class="col-md">
-            <h2><i class="bi bi-cast text-dark"></i> MY PROJECT</h2>
+            <h2><i class="bi bi-cast text-dark"></i> GALERY PRODUCT</h2>
           </div>
         </div>
         <div class="row text-center">
@@ -307,7 +304,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col mb-4">
-            <h2><i class="bi bi-person-lines-fill text-dark"></i> Contact Me</h2>
+            <h2><i class="bi bi-person-lines-fill text-dark"></i> CONTACT Me</h2>
           </div>
         </div>
         <div class="row justify-content-center">
