--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body id="home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style="background-color: #0d6dfd49">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand text-light" href="#"> MY PORTFOLIO </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
