--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
     <div class="sosmedwa navbar-expand-lg fixed-bottom ms-auto">
       <button>
-        <a href="https://api.whatsapp.com/send?phone=6285274616267&text=Kak iYak, Saya mau membuat Website atau aplikasi Berbasis Web."> <img src="img/sosmed/icons8-whatsapp-unscreen 001.gif" alt="" /></a>
+        <a href="https://api.whatsapp.com/send?phone=62852746(16-267)&text=Kak iYak, Saya mau membuat Website atau aplikasi Berbasis Web."> <img src="img/sosmed/icons8-whatsapp-unscreen 001.gif" alt="" /></a>
       </button>
     </div>
 
@@ -364,7 +364,7 @@
               <ul class="vsc-popup-body__list">
                 <li class="vsc-popup-body__list-item">
                   <a
-                    href="https://api.whatsapp.com/send?phone=6285731255530&amp;text=Saya%20mau%20tukar%20pulsa%20ke ATM%20bisa%20bang?&amp;l=id"
+                    href="https://api.whatsapp.com/send?phone=628573(125553)0&amp;text=Saya%20mau%20tukar%20pulsa%20ke ATM%20bisa%20bang?&amp;l=id"
                     rel="noopener"
                     target="_blank"
                     aria-label="Contact Samsudin Abas, opens in a new window"
