--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
     <div class="sosmedwa navbar-expand-lg fixed-bottom ms-auto">
       <button>
-        <a href="https://api.whatsapp.com/send?phone=62852746(16-267)&text=Kak iYak, Saya mau membuat Website atau aplikasi Berbasis Web."> <img src="img/sosmed/icons8-whatsapp-unscreen 001.gif" alt="" /></a>
+        <a href="https://api.whatsapp.com/send?phone==&text=Kak iYak, Saya mau membuat Website atau aplikasi Berbasis Web."> <img src="img/sosmed/icons8-whatsapp-unscreen 001.gif" alt="" /></a>
       </button>
     </div>
 
